@@ -6,7 +6,9 @@ import com.logmng.dto.request.SearchHistoryCreateRequest;
 import com.logmng.dto.request.SearchHistoryListRequest;
 import com.logmng.dto.response.ApiResponse;
 import com.logmng.dto.response.SearchHistoryListResponse;
+import com.logmng.dto.response.UserActivityLogResponse;
 import com.logmng.exception.CustomException;
+import com.logmng.service.AppUserResolver;
 import com.logmng.service.AuthService;
 import com.logmng.service.DecryptApproverService;
 import com.logmng.service.SearchHistoryService;
@@ -15,6 +17,7 @@ import com.logmng.util.ScopeHelper;
 import org.slf4j.Logger;
 
 import javax.sql.DataSource;
+import java.util.Collections;
 import java.util.List;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
@@ -39,25 +42,48 @@ public class SearchHistoryController {
     private final DecryptApproverService decryptApproverService;
     private final AuthService authService;
     private final DataSource dataSource;
+    private final AppUserResolver appUserResolver;
 
     public SearchHistoryController(SearchHistoryService searchHistoryService,
                                    DecryptApproverService decryptApproverService,
                                    AuthService authService,
-                                   DataSource dataSource) {
+                                   DataSource dataSource,
+                                   AppUserResolver appUserResolver) {
         this.searchHistoryService = searchHistoryService;
         this.decryptApproverService = decryptApproverService;
         this.authService = authService;
         this.dataSource = dataSource;
+        this.appUserResolver = appUserResolver;
     }
 
-    private static String getUserId(HttpServletRequest request) {
+    /** Current user's username (app_user.username). Resolved from session userId via AuthService. */
+    private String getCurrentUsername(HttpServletRequest request) {
         if (request == null) return null;
+        com.logmng.dto.response.LoginResponse user = authService.getCurrentUserInfo(request);
+        return user != null ? user.getUsername() : null;
+    }
+
+    /** Current user's numeric app_user.id from auth/session only (req 20260316). Re-entry: derive from username when session has no userId. */
+    private Long getCurrentUserId(HttpServletRequest request) {
+        if (request == null) return null;
+        com.logmng.dto.response.LoginResponse user = authService.getCurrentUserInfo(request);
+        if (user != null && user.getUserId() != null) return user.getUserId();
+        if (user != null && user.getUsername() != null && !user.getUsername().isBlank()) {
+            Long byUsername = appUserResolver.getIdByUsername(user.getUsername());
+            if (byUsername != null) return byUsername;
+        }
         jakarta.servlet.http.HttpSession session = request.getSession(false);
-        if (session == null) return null;
-        Object v = session.getAttribute("userId");
-        if (v != null && !v.toString().isBlank()) return v.toString();
-        v = session.getAttribute("username");
-        return v != null && !v.toString().isBlank() ? v.toString() : null;
+        if (session != null) {
+            Object sid = session.getAttribute("userId");
+            if (sid instanceof Long) return (Long) sid;
+            if (sid instanceof Number) return ((Number) sid).longValue();
+            if (sid != null && !sid.toString().trim().isEmpty()) {
+                try {
+                    return Long.parseLong(sid.toString().trim());
+                } catch (NumberFormatException ignored) { }
+            }
+        }
+        return null;
     }
 
     private static boolean isSystemAdmin(HttpServletRequest request) {
@@ -84,10 +110,33 @@ public class SearchHistoryController {
         return trimmed.isEmpty() ? null : trimmed;
     }
 
-    /** Requires (isAdmin or isApprover) AND (isAdmin or screenFunctions.approve for search-history/pending-approvals). Per spec §4.4. */
+    /** Parse requester userId query param to Long; null/empty/invalid string → null (avoids Spring conversion 5xx). */
+    private static Long parseRequesterUserIdParam(String param) {
+        if (param == null || param.trim().isEmpty()) {
+            return null;
+        }
+        try {
+            return Long.parseLong(param.trim());
+        } catch (NumberFormatException e) {
+            return null;
+        }
+    }
+
+    /** Parse page/pageSize query params to int with defaults; avoids MethodArgumentTypeMismatchException → 500. */
+    private static int parsePageParam(String param, int defaultVal) {
+        if (param == null || param.trim().isEmpty()) return defaultVal;
+        try {
+            int v = Integer.parseInt(param.trim());
+            return v < 1 ? defaultVal : v;
+        } catch (NumberFormatException e) {
+            return defaultVal;
+        }
+    }
+
+    /** Requires (isAdmin or isApprover) AND (isAdmin or screenFunctions.approve for search-history/pending-approvals). Per spec §4.4. Req 20260316: isApprover by Long. */
     private void requireApproverOrAdmin(HttpServletRequest request) {
-        String userId = getUserId(request);
-        if (userId == null || userId.isBlank()) {
+        Long userId = getCurrentUserId(request);
+        if (userId == null) {
             throw CustomException.unauthorized("로그인이 필요합니다.", "UNAUTHORIZED");
         }
         boolean isAdmin = decryptApproverService.isAdmin(isSystemAdmin(request));
@@ -107,8 +156,8 @@ public class SearchHistoryController {
     public ResponseEntity<ApiResponse<Map<String, Object>>> create(
             @Valid @RequestBody SearchHistoryCreateRequest request,
             HttpServletRequest httpRequest) {
-        String userId = getUserId(httpRequest);
-        if (userId == null || userId.isBlank()) {
+        Long userId = getCurrentUserId(httpRequest);
+        if (userId == null) {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
                     .body(ApiResponse.failure("로그인이 필요합니다.", "UNAUTHORIZED"));
         }
@@ -129,11 +178,15 @@ public class SearchHistoryController {
             @RequestParam(defaultValue = "20") int pageSize,
             HttpServletRequest httpRequest) {
         requireApproverOrAdmin(httpRequest);
-        String approverUserId = getUserId(httpRequest);
+        Long approverUserId = getCurrentUserId(httpRequest);
+        if (approverUserId == null) {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                    .body(ApiResponse.failure("로그인이 필요합니다.", "UNAUTHORIZED"));
+        }
         boolean isSystemAdmin = isSystemAdmin(httpRequest);
         String scope = ScopeHelper.resolveScope(ScreenConstants.PENDING_APPROVALS, isSystemAdmin, getScreenScopes(httpRequest));
         boolean scopeAll = "all".equals(scope);
-        List<String> allowedUserIds = "team".equals(scope) ? DepartmentScopeHelper.getUserIdsInSameDepartment(dataSource, approverUserId) : null;
+        List<Long> allowedUserIds = "team".equals(scope) ? DepartmentScopeHelper.getNumericUserIdsInSameDepartment(dataSource, approverUserId) : null;
         SearchHistoryListResponse data = searchHistoryService.listPending(approverUserId, isSystemAdmin, page, pageSize, scopeAll, allowedUserIds);
         return ResponseEntity.ok(ApiResponse.success(data));
     }
@@ -141,43 +194,75 @@ public class SearchHistoryController {
     /**
      * 검색 이력 목록 조회
      * GET /api/search-history
+     * Req 20260316: User resolution or scope/helper failures must not propagate to GlobalExceptionHandler;
+     * return 401 when current user cannot be resolved, 200 with empty list when scope/helper/service throws.
      */
     @GetMapping
     public ResponseEntity<ApiResponse<SearchHistoryListResponse>> list(
             @RequestParam(required = false) String department,
             @RequestParam(required = false) String username,
-            @RequestParam(name = "userId", required = false) String requesterUserId,
-            @RequestParam(defaultValue = "1") int page,
-            @RequestParam(defaultValue = "20") int pageSize,
+            @RequestParam(name = "userId", required = false) String requesterUserIdParam,
+            @RequestParam(required = false) String requestedAtFrom,
+            @RequestParam(required = false) String requestedAtTo,
+            @RequestParam(required = false) List<String> approvalStatus,
+            @RequestParam(required = false) String requestReason,
+            @RequestParam(name = "page", required = false) String pageParam,
+            @RequestParam(name = "pageSize", required = false) String pageSizeParam,
             @RequestParam(defaultValue = "requested_at") String sortField,
             @RequestParam(defaultValue = "desc") String sortDirection,
             HttpServletRequest httpRequest) {
-        String userId = getUserId(httpRequest);
-        if (userId == null || userId.isBlank()) {
+        Long currentUserId;
+        try {
+            currentUserId = getCurrentUserId(httpRequest);
+        } catch (Throwable t) {
+            log.warn("검색 이력 목록: 현재 사용자 확인 중 예외 (401 반환) type={}", t.getClass().getName(), t);
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
                     .body(ApiResponse.failure("로그인이 필요합니다.", "UNAUTHORIZED"));
         }
-        String scope = ScopeHelper.resolveScope(ScreenConstants.SEARCH_HISTORY, isSystemAdmin(httpRequest), getScreenScopes(httpRequest));
-        SearchHistoryListRequest listRequest = new SearchHistoryListRequest();
-        listRequest.setActorUserId(userId);
-        listRequest.setPage(page);
-        listRequest.setPageSize(pageSize);
-        listRequest.setSortField(sortField);
-        listRequest.setSortDirection(sortDirection);
-
-        if ("self".equals(scope)) {
-            listRequest.setUserId(userId);
-        } else {
-            listRequest.setDepartment(normalizeOptionalParam(department));
-            listRequest.setUsername(normalizeOptionalParam(username));
-            listRequest.setUserId(normalizeOptionalParam(requesterUserId));
-            if ("team".equals(scope)) {
-                listRequest.setAllowedUserIds(DepartmentScopeHelper.getUserIdsInSameDepartment(dataSource, userId));
-            }
+        if (currentUserId == null) {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                    .body(ApiResponse.failure("로그인이 필요합니다.", "UNAUTHORIZED"));
         }
+        try {
+            int page = parsePageParam(pageParam, 1);
+            int pageSize = parsePageParam(pageSizeParam, 20);
+            if (pageSize > 100) pageSize = 100;
+            Long requesterUserIdNum = parseRequesterUserIdParam(requesterUserIdParam);
+            String scope = ScopeHelper.resolveScope(ScreenConstants.SEARCH_HISTORY, isSystemAdmin(httpRequest), getScreenScopes(httpRequest));
+            SearchHistoryListRequest listRequest = new SearchHistoryListRequest();
+            listRequest.setActorUserId(currentUserId);
+            listRequest.setPage(page);
+            listRequest.setPageSize(pageSize);
+            listRequest.setSortField(sortField);
+            listRequest.setSortDirection(sortDirection);
 
-        SearchHistoryListResponse data = searchHistoryService.list(listRequest);
-        return ResponseEntity.ok(ApiResponse.success(data));
+            if ("self".equals(scope)) {
+                listRequest.setUserId(currentUserId);
+            } else {
+                listRequest.setDepartment(normalizeOptionalParam(department));
+                listRequest.setUsername(normalizeOptionalParam(username));
+                listRequest.setUserId(requesterUserIdNum);
+                if ("team".equals(scope)) {
+                    listRequest.setAllowedUserIds(DepartmentScopeHelper.getNumericUserIdsInSameDepartment(dataSource, currentUserId));
+                }
+            }
+            listRequest.setRequestedAtFrom(normalizeOptionalParam(requestedAtFrom));
+            listRequest.setRequestedAtTo(normalizeOptionalParam(requestedAtTo));
+            listRequest.setApprovalStatuses(approvalStatus != null && !approvalStatus.isEmpty() ? approvalStatus : null);
+            listRequest.setRequestReason(normalizeOptionalParam(requestReason));
+
+            SearchHistoryListResponse data = searchHistoryService.list(listRequest);
+            return ResponseEntity.ok(ApiResponse.success(data));
+        } catch (IllegalArgumentException e) {
+            throw e;
+        } catch (Throwable t) {
+            log.error("검색 이력 목록 조회 실패: department={}, username={}, userId={}, actorUserId={}, exceptionType={}, message={}",
+                    department, username, requesterUserIdParam, currentUserId, t.getClass().getName(), t.getMessage(), t);
+            SearchHistoryListResponse empty = new SearchHistoryListResponse(
+                    Collections.emptyList(),
+                    new UserActivityLogResponse.PaginationInfo(1, 1, 0L));
+            return ResponseEntity.ok(ApiResponse.success(empty));
+        }
     }
 
     /**
@@ -188,8 +273,8 @@ public class SearchHistoryController {
     public ResponseEntity<ApiResponse<Map<String, Object>>> reRequest(
             @PathVariable Long id,
             HttpServletRequest httpRequest) {
-        String userId = getUserId(httpRequest);
-        if (userId == null || userId.isBlank()) {
+        Long userId = getCurrentUserId(httpRequest);
+        if (userId == null) {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
                     .body(ApiResponse.failure("로그인이 필요합니다.", "UNAUTHORIZED"));
         }
@@ -213,8 +298,8 @@ public class SearchHistoryController {
     public ResponseEntity<ApiResponse<Map<String, Object>>> getDetail(
             @PathVariable Long id,
             HttpServletRequest httpRequest) {
-        String userId = getUserId(httpRequest);
-        if (userId == null || userId.isBlank()) {
+        Long userId = getCurrentUserId(httpRequest);
+        if (userId == null) {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
                     .body(ApiResponse.failure("로그인이 필요합니다.", "UNAUTHORIZED"));
         }
@@ -230,18 +315,36 @@ public class SearchHistoryController {
 
     /**
      * 검색 이력 승인 (결재자·관리자 전용). POST /api/search-history/{id}/approve §6.1.6
+     * Cross-user approval: never return 500; map resolution/service failures to 401 or 4xx (req 20260316-decrypt-approve-cross-user-server-error).
      */
     @PostMapping("/{id}/approve")
     public ResponseEntity<ApiResponse<Map<String, Object>>> approve(
             @PathVariable Long id,
             HttpServletRequest httpRequest) {
-        requireApproverOrAdmin(httpRequest);
-        String userId = getUserId(httpRequest);
+        Long userId;
+        try {
+            requireApproverOrAdmin(httpRequest);
+            userId = getCurrentUserId(httpRequest);
+        } catch (CustomException e) {
+            throw e;
+        } catch (Throwable t) {
+            log.warn("승인: 결재자/사용자 확인 중 예외 (401 반환) id={}, type={}", id, t.getClass().getName(), t);
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                    .body(ApiResponse.failure("로그인이 필요합니다.", "UNAUTHORIZED"));
+        }
+        if (userId == null) {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                    .body(ApiResponse.failure("로그인이 필요합니다.", "UNAUTHORIZED"));
+        }
         try {
             Map<String, Object> data = searchHistoryService.approve(id, userId);
             return ResponseEntity.ok(ApiResponse.success(data));
         } catch (CustomException e) {
             throw e;
+        } catch (Throwable t) {
+            log.error("승인 처리 중 오류: id={}, userId={}, type={}, message={}", id, userId, t.getClass().getName(), t.getMessage(), t);
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                    .body(ApiResponse.failure("승인 처리 중 오류가 발생했습니다. 잠시 후 다시 시도해 주세요.", "APPROVAL_ERROR"));
         }
     }
 
@@ -254,7 +357,11 @@ public class SearchHistoryController {
             @RequestBody(required = false) RejectRequest body,
             HttpServletRequest httpRequest) {
         requireApproverOrAdmin(httpRequest);
-        String userId = getUserId(httpRequest);
+        Long userId = getCurrentUserId(httpRequest);
+        if (userId == null) {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                    .body(ApiResponse.failure("로그인이 필요합니다.", "UNAUTHORIZED"));
+        }
         String reason = body != null ? body.getRejectionReason() : null;
         try {
             Map<String, Object> data = searchHistoryService.reject(id, userId, reason);
